--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -63,6 +63,7 @@
     <div class="slider-fullscreen" id="">
       <img src="images/icon-previous.svg" alt="" id="fullscreenprev">
       <img src="images/icon-next.svg" alt="" id="fullscreennext">
+      <img src="images/icon-close.svg" alt="" id="fullscreenclose">
       <div class="full-image">
         <img src="images/image-product-1.jpg" alt="image-product-1">
         <img src="images/image-product-2.jpg" alt="image-product-2">
